<resources>
    <string name="app_name">BonMenu</string>

    <!-- Pagina de register/login -->
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="no_account">¿No tienes cuenta? Regístrate aquí</string>
    <string name="loginGoogle">Iniciar sesión con Google</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="actual_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="back_button">Volver</string>
    <string name="save_changes">Guardar cambios</string>

    <!-- Pagina de home -->
    <string name="hint_search">Buscar...</string>
    <string name="supermarket">Supermercados</string>
    <string name="menu">Menús</string>
    <string name="sales">Ofertas</string>
    <string name="orders">Pedidos</string>
    <string name="home">Inicio</string>
    <string name="settings">Ajustes</string>

    <!-- Toast -->
    <string name="toast_error">Error</string>
    <string name="toast_register">Usuario registrado con éxito!</string>
    <string name="toast_login">Inicio de sesión exitoso!</string>
    <string name="toast_password_updated">Contraseña actualizada correctamente</string>
    <string name="auth_error">El correo electrónica o la contraseña son incorrectos</string>
    <string name="toast_actual_password">La contraseña actual no coincide</string>
    <string name="next_update">Disponible próximamente</string>

    <!-- Pagina de menus -->
    <string name="protein">Proteína</string>
    <string name="lowCalories">Bajo en calorias</string>
    <string name="fibre">Fibra</string>

</resources>