<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="226dp"
        android:layout_height="214dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginBottom="260dp"
        android:background="@null"
        android:contentDescription="@string/back_button"
        android:elevation="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/volver"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="83dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edit_text"
        android:elevation="4dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="RtlSymmetry" />

    <!-- Campo de Contraseña -->
    <EditText
        android:id="@+id/input_password"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="18dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edit_text"
        android:elevation="4dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        tools:ignore="RtlSymmetry" />

    <!-- Botón de Inicio sesion -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="320dp"
        android:layout_height="62dp"
        android:layout_marginTop="70dp"
        android:text="@string/login"
        android:backgroundTint="@color/dark_green"
        android:textColor="@android:color/white"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />
</androidx.constraintlayout.widget.ConstraintLayout>